snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha1
3f9fdde78573ee2b13d50304d3dad9da1ed435ba